[metadata]
name = privacyscanner
version = 0.7.6
home-page = https://github.com/PrivacyScore/privacyscanner
license = MIT
license-file = LICENSE
author = PrivacyScore developers
author-email = privacyscore.psi@uni-bamberg.de
description = Privacyscanner scans websites for security and privacy properties. It is the future scanning engine of PrivacyScore.
long-description = file: README.md
long-description-content-type = text/markdown
platform = any
keywords = privacy, security, scanner, scan, privacyscore, privacyscanner
classifiers =
  Development Status :: 4 - Beta
  License :: OSI Approved :: MIT License
  Programming Language :: Python :: 3
  Programming Language :: Python :: 3.5
  Programming Language :: Python :: 3.6
  Programming Language :: Python :: 3.7

[options]
python_requires = >= 3.5
packages = find:
test_suite = tests
setup_requires = setuptools
install_requires =
  psycopg2-binary
  toposort
  dnspython
  geoip2
  requests
  adblockeval
  tldextract
  pychrome
  cryptography
  pillow
  psutil

[options.packages.find]
exclude =
  tests
  examples

[options.entry_points]
console_scripts =
  privacyscanner = privacyscanner.scanner:main

[bdist_wheel]
universal = false

